discussion/kv_engine/168586/168586_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Move ItemsToFlush & AggregatedFlushStats from VBucket

... and into vbucket_types.h. This further reduces coupling with
vbucket.h; so users of the aforementioned types don't necessarily need
to include the entirity of vbucket.h.

Impact on header cost is a small reduction in instances and average include time:

Before:
    kv_engine/engines/ep/src/vbucket.h (included 73 times, avg 419 ms), included via:

After:
    kv_engine/engines/ep/src/vbucket.h (included 71 times, avg 407 ms), included via:

Change-Id: I46c1f00c51c25acb6348cbc561e6192ba68884d2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:49:02.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 16:26:03.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24854/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24854/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4480/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16441/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16732/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16732/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17528/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17528/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14777/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:59:17: error: use of undeclared identifier "VBucket" [clang-diagnostic-error]
                VBucket&)>;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:59:25: error: expected expression [clang-diagnostic-error]
                VBucket&)>;
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:61:14: error: unknown type name "SyncWriteTimeoutHandlerFactory" [clang-diagnostic-error]
extern const SyncWriteTimeoutHandlerFactory NoopSyncWriteTimeoutFactory;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:68:17: error: use of undeclared identifier "queued_item" [clang-diagnostic-error]
    std::vector<queued_item> items;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:72:5: error: unknown type name "CheckpointType" [clang-diagnostic-error]
    CheckpointType checkpointType = CheckpointType::Memory;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:75:5: error: unknown type name "UniqueFlushHandle" [clang-diagnostic-error]
    UniqueFlushHandle flushHandle;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14777/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket_types.h:59:17:
error: use of undeclared identifier "VBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14777/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13623/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36233/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4422/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15583/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
